--- a/lib/Makefile
+++ b/lib/Makefile
@@ -22,7 +22,7 @@ print_done:
 	@echo "build done.\noutput: build/libmadserver.a"
 
 $(BUILDDIR)/%.o: $(SRCDIR)/%.cpp
-	$(CXX) -I$(INCLUDEDIR) -I$(MADLIB_RUNTIME_HEADERS_PATH) -I$(MADLIB_RUNTIME_LIB_HEADERS_PATH) -std=c++2a -O2 -fPIC $(CXXFLAGS) -c $< -o $@
+	$(CXX) -g -I$(INCLUDEDIR) -I$(MADLIB_RUNTIME_HEADERS_PATH) -I$(MADLIB_RUNTIME_LIB_HEADERS_PATH) -std=c++2a -O2 -fPIC $(CXXFLAGS) -c $< -o $@
 
 build/libmadserver.a: $(OBJS)
 	$(AR) rc $@ $^
