--- a/lib/Makefile
+++ b/lib/Makefile
@@ -9,8 +9,8 @@ SRCDIR := src
 OBJS :=\
   $(BUILDDIR)/server.o
 
-MADLIB_RUNTIME_HEADERS_PATH := $(shell madlib config runtime-headers-path)
-MADLIB_RUNTIME_LIB_HEADERS_PATH := $(shell madlib config runtime-lib-headers-path)
+MADLIB_RUNTIME_HEADERS_PATH := "$(shell madlib config runtime-headers-path)"
+MADLIB_RUNTIME_LIB_HEADERS_PATH := "$(shell madlib config runtime-lib-headers-path)"
 
 build: prepare build/libmadserver.a print_done
 
@@ -21,7 +21,7 @@ print_done:
 	@echo "build done.\noutput: build/libmadserver.a"
 
 $(BUILDDIR)/%.o: $(SRCDIR)/%.cpp
-	$(CXX) -I$(INCLUDEDIR) -I$(MADLIB_RUNTIME_HEADERS_PATH) -I$(MADLIB_RUNTIME_LIB_HEADERS_PATH) -std=c++17 -O1 -fPIC $(CXXFLAGS) -c $< -o $@
+	$(CXX) -g -I$(INCLUDEDIR) -I$(MADLIB_RUNTIME_HEADERS_PATH) -I$(MADLIB_RUNTIME_LIB_HEADERS_PATH) -std=c++17 -O1 -fPIC $(CXXFLAGS) -c $< -o $@
 
 build/libmadserver.a: $(OBJS)
 	$(AR) rc $@ $^
